fix: improve document signer pdf experience on mobile (#131)

--- a/src/components/Employee/DocumentSigner/SignatureForm.module.scss
+++ b/src/components/Employee/DocumentSigner/SignatureForm.module.scss
@@ -17,3 +17,23 @@
   color: var(--g-colors-error-500);
   font-size: toRem(14);
 }
+
+.smallEmbedPdfContainer {
+  padding: toRem(24);
+  background: var(--g-colors-gray-200);
+}
+
+.smallEmbedPdf {
+  width: toRem(100);
+  height: toRem(134);
+  flex-shrink: 0;
+  border: 1px solid var(--g-colors-gray-500);
+  border-radius: toRem(4);
+  box-shadow: var(--g-shadow-100);
+  overflow: hidden;
+  pointer-events: none;
+}
+
+.downloadAndReviewInstructions {
+  margin-bottom: 0;
+}
